--- a/app/src/main/res/layout/fragment_nasa_news.xml
+++ b/app/src/main/res/layout/fragment_nasa_news.xml
@@ -8,6 +8,7 @@
     android:background="@color/my_light_primary">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_news"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </FrameLayout>
