--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="my_light_primary">#7DC8F0</color>
+    <color name="my_primary">#1E1E2C</color>
+    <color name="my_second_primary">#36363E</color>
+    <color name="dark_background">#121212</color>
+    <color name="button_background">#1F1F1F</color>
+
 </resources>
