--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="correct_answer">#298E52</color>
+    <color name="wrong_answer">#8E2929</color>
     <color name="white">#FFFFFFFF</color>
     <color name="my_primary">#1E1E2C</color>
     <color name="my_second_primary">#36363E</color>
