--- a/app/src/main/res/drawable/spinner_background.xml
+++ b/app/src/main/res/drawable/spinner_background.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="12dp" />
     <stroke android:width="1dp" android:color="@color/white" />
-    <solid android:color="@color/dark_background" />
+    <solid android:color="@color/my_second_primary" />
 </shape>
