--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,10 +4,11 @@
     <color name="correct_answer">#298E52</color>
     <color name="wrong_answer">#8E2929</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="my_primary">#1E1E2C</color>
     <color name="my_second_primary">#36363E</color>
     <color name="dark_background">#121212</color>
-    <color name="button_background">#BB86FC</color>
+    <color name="button_background">#362E47</color>
     <color name="card_background">#1E1E1E</color>
+    <color name="my_primary">#1E1E2C</color>
+
 
 </resources>
